trunk/qclive/qclive-core/src/test/resources/samples/qclive/wigValidator/invalid/TCGA-00-0001.wig
# INVALID: Missing declaration line for first track -> too many errors
browser position chr19:59304200-59310700
browser hide all
#	150 base wide bar graph at arbitrarily spaced positions,
#	threshold line drawn at y=11.76
#	autoScale off viewing range set to [0:25]
#	priority = 10 positions this as the first graph
#	Note, one-relative coordinate system in use for this format
# Here should be the declaration line
variableStep chrom=chr19 span=150
59304701 10.0
59304901 12.5
59305401 15.0
59305601 17.5
59305901 20.0
59306081 17.5
59306301 15.0
59306691 12.5
59307871 10.0
59307871 10.0